--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
       - name: Run unit tests
-        uses: actions/setup-node@latest
+        uses: actions/setup-node@v4
         with:
           node-version: 20.x
       - run: npm ci
