--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,9 @@
-name: CI
-
+name: Release
+permissions:
+  contents: write
 on:
   push:
-    branches-ignore: [ main ]
+    branches: main
 
 jobs:
   build:
@@ -11,11 +12,10 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
-      - name: Setup Node
+      - name: Run linter
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
-      - name: Run linter
         run: npm ci && npm tun lint
       - name: Run unit tests
         run: npm run test
