--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,10 +12,16 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
-      - name: Run linter
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
+      - name: Run linter
         run: npm ci && npm tun lint
       - name: Run unit tests
         run: npm run test
+
+      - name: Run Semantic Release
+        run: npx semantic-release
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
