--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,5 +1,5 @@
 {
-	"version": "${version}",
+	"tagFormat": "${version}",
 	"branches": [ "main" ],
 	"plugins": [
 		"@semantic-release/commit-analyzer",
