--- a/.releaserc.json
+++ b/.releaserc.json
@@ -3,7 +3,11 @@
 	"branches": [ "main" ],
 	"plugins": [
 		"@semantic-release/commit-analyzer",
-		"@semantic-release/release-notes-generator",
+		[	"@semantic-release/release-notes-generator",
+			{
+				"preset": "conventionalcommits"
+			}
+		],
 		"@semantic-release/npm"
 	]
 }
