--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@semantic-release/npm": "^12.0.1",
     "@semantic-release/release-notes-generator": "^14.0.0",
     "commitlint": "^19.3.0",
+    "conventional-changelog-conventionalcommits": "^8.0.0",
     "eslint": "^9.4.0",
     "globals": "^15.4.0",
     "husky": "^9.0.11",
