--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "semantic-release": "^24.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jgcrunden/semantic-release-jira-release-generator.git"
   }
 }
